force-app/main/default/objects/Hello_Sign__c/Hello_Sign__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Hello Sign</label>
</CustomObject>