force-app/main/default/objects/Hello_Sign__c/fields/Admin_Name__c.field-meta.xml
<CustomField>
    <fullName>Admin_Name__c</fullName>
    <label>Admin Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>