force-app/main/default/objects/Hello_Sign__c/fields/TestMode__c.field-meta.xml
<CustomField>
    <fullName>TestMode__c</fullName>
    <defaultValue>false</defaultValue>
    <label>TestMode</label>
    <type>Checkbox</type>
</CustomField>